# lib2

./: LICENSE  README.md  pylintrc  pyproject.toml
.github/actions/python-setup/: action.yaml
.github/workflows/: linter.yml  release.yml
src/remla23-team10-preprocessing/: __init__.py  preprocessing.py
src/restaurant_preprocessing/: preprocessing.py  version_util.py
