[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remla23-team10-preprocessing"
version = "1.0.0"
authors = [
  { name="REMLA23 Team 10", email="author@example.com" },
]
description = "Preprocessing for the REMLA project"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24.0",
    "nltk>=3.8.1",
    "scikit-learn>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pylint==2.12.2",
    "dslinter==2.0.9",
    "mllint==0.12.2",
]
